--- a/src/gestor/de/base/de/datos/Main_Screen.form
+++ b/src/gestor/de/base/de/datos/Main_Screen.form
@@ -38,6 +38,9 @@
   <SubComponents>
     <Container class="javax.swing.JTabbedPane" name="Main_TabbedPane">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="1"/>
         </Property>
@@ -47,6 +50,12 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
         <Container class="javax.swing.JPanel" name="Show_Tab">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="41" green="3f" red="3c" type="rgb"/>
+            </Property>
+            <Property name="opaque" type="boolean" value="false"/>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
               <JTabbedPaneConstraints tabName="Show">
@@ -93,7 +102,7 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="Show_TablePane" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="42" max="32767" attributes="0"/>
+                      <EmptySpace pref="44" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="ShowModify_Button" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="ShowDelete_Button" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -109,13 +118,12 @@
               <Properties>
                 <Property name="maximumRowCount" type="int" value="7"/>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="6">
+                  <StringArray count="5">
                     <StringItem index="0" value="Tables"/>
                     <StringItem index="1" value="Indexes"/>
-                    <StringItem index="2" value="Functions"/>
-                    <StringItem index="3" value="Triggers"/>
-                    <StringItem index="4" value="Users &amp; Databases"/>
-                    <StringItem index="5" value="Views"/>
+                    <StringItem index="2" value="Triggers"/>
+                    <StringItem index="3" value="Users &amp; Databases"/>
+                    <StringItem index="4" value="Views"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -128,6 +136,9 @@
                 <Property name="text" type="java.lang.String" value="Show"/>
                 <Property name="toolTipText" type="java.lang.String" value="Show a table&apos;s contents"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="Show_ButtonMouseClicked"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="Show_TablePane">
               <AuxValues>
@@ -138,7 +149,6 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="Show_Table">
                   <Properties>
-                    <Property name="autoCreateRowSorter" type="boolean" value="true"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
                         <EtchetBorder/>
@@ -146,6 +156,9 @@
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="16" style="0"/>
+                    </Property>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="0" green="0" red="0" type="rgb"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="4" rowCount="4">
@@ -155,8 +168,10 @@
                         <Column editable="true" title="Title 4" type="java.lang.Object"/>
                       </Table>
                     </Property>
-                    <Property name="columnSelectionAllowed" type="boolean" value="true"/>
+                    <Property name="autoResizeMode" type="int" value="0"/>
+                    <Property name="opaque" type="boolean" value="false"/>
                     <Property name="rowHeight" type="int" value="30"/>
+                    <Property name="rowSelectionAllowed" type="boolean" value="false"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -178,6 +193,9 @@
                 <Property name="text" type="java.lang.String" value="Show Table"/>
                 <Property name="toolTipText" type="java.lang.String" value="If it is a Table, shows the selected table."/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ShowTable_ButtonMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -225,7 +243,7 @@
             </DimensionLayout>
           </Layout>
         </Container>
-        <Container class="javax.swing.JPanel" name="jPanel1">
+        <Container class="javax.swing.JPanel" name="DBConnections_Tab">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
               <JTabbedPaneConstraints tabName="DB Connections">
