--- a/src/gestor/de/base/de/datos/Main_Screen.form
+++ b/src/gestor/de/base/de/datos/Main_Screen.form
@@ -169,6 +169,9 @@
                     <Property name="autoResizeMode" type="int" value="0"/>
                     <Property name="rowHeight" type="int" value="30"/>
                     <Property name="rowSelectionAllowed" type="boolean" value="false"/>
+                    <Property name="selectionForeground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ca" green="65" red="2f" type="rgb"/>
+                    </Property>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -238,9 +241,6 @@
                   <Font name="Dialog" size="18" style="1"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="createTab_SubTabMouseClicked"/>
-              </Events>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
               <SubComponents>
@@ -466,6 +466,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Create"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="createUser_ButtonMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -789,9 +792,6 @@
                   <Font name="Dialog" size="16" style="1"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="updateSchema_TabMouseClicked"/>
-              </Events>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
               <SubComponents>
@@ -1097,6 +1097,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="Update"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="updateSchema_ButtonMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
